--- a/style.css
+++ b/style.css
@@ -1,14 +1,63 @@
-.body{
+.body {
 	background: white;
 	font-size: large;
 }
-.word{
+
+.word {
 	color: black;
 	font-size: medium;
 }
-.button_show{
-	border-radius: 86px;
-	background: linear-gradient(145deg, #966161, #b37474);
-	box-shadow:  34px 34px 45px #895959,
-				-34px -34px 45px #c57f7f;
+
+.button_show {
+	border: none;
+	display: block;
+	position: relative;
+	padding: 0.7em 2.4em;
+	font-size: 18px;
+	background: transparent;
+	cursor: pointer;
+	user-select: none;
+	overflow: hidden;
+	color: royalblue;
+	z-index: 1;
+	font-family: inherit;
+	font-weight: 500;
+}
+
+.button_show span {
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	background: transparent;
+	z-index: -1;
+	border: 4px solid royalblue;
+}
+
+.button_show span::before {
+	content: "";
+	display: block;
+	position: absolute;
+	width: 8%;
+	height: 500%;
+	background: var(--lightgray);
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%) rotate(-60deg);
+	transition: all 0.3s;
+}
+
+.button_show:hover span::before {
+	transform: translate(-50%, -50%) rotate(-90deg);
+	width: 100%;
+	background: royalblue;
+}
+
+.button_show:hover {
+	color: white;
+}
+
+.button_show:active span::before {
+	background: #2751cd;
 }
