modified:   index.html 	modified:   style.css

--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ li a {
 	color: rgb(255, 255, 255);
 	text-align: center;
 	padding: 14px 16px;
+	font-size: 200%;
 	text-decoration: none;
 }
 
@@ -50,6 +51,13 @@ li a:hover {
 	width: 100%;
 	padding: 0.7em 0.25em;
 	text-decoration: none;
+}
+
+.action2 {
+	width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: end;
 }
 
 .wordCard {
