--- a/style.css
+++ b/style.css
@@ -7,6 +7,14 @@
 	background-size: 20px 20px;
 }
 
+.main {
+	font-size: 100%;
+	height: 200px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
 ul {
 	list-style-type: none;
 	margin: 0;
@@ -39,12 +47,11 @@ li a:hover {
 
 .button_show {
 	position: relative;
-	left: -6%;
 	background-color: #6558d3;
-	border-radius: 8px;
+	border-radius: 10px;
 	color: #fff;
 	font-weight: 500;
-	font-size: 1.125rem;
+	font-size: 200%;
 	text-align: center;
 	border: 0;
 	outline: 0;
@@ -54,7 +61,7 @@ li a:hover {
 }
 
 .action2 {
-	width: 100%;
+	width: 50%;
 	display: flex;
 	align-items: center;
 	justify-content: end;
