--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* Version : 1.0.1.01 */
-/* Date : 2023/07/29 11.37 */
+/* Date : 2023/07/29 11.47 */
 /* Author : Long17369 */
 .body {
 	background: white;
@@ -130,7 +130,7 @@ li a:hover {
 	width: 100%;
 	display: flex;
 	align-items: center;
-	justify-content: center;
+	justify-content: space-between;
 }
 
 .wordCard .button1 {
