--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-/* Version : 1.0.1.03 */
-/* Date : 2023/07/29 13:05 */
+/* Version : 1.0.1.04 */
+/* Date : 2023/07/29 19:38 */
 /* Author : Long17369 */
 .body {
 	background: white;
@@ -73,7 +73,7 @@ li a:hover {
 	width: 50%;
 	display: flex;
 	align-items: center;
-	justify-content: end;
+	justify-content: center;
 }
 
 .wordCard {
